# codesurface

./: .gitignore  README.md  pyproject.toml  workflow-benchmark.md
docs/plans/: 2026-03-30-startup-progress-design.md
scripts/: generate_charts.py
src/codesurface/: benchmark.py  cs_parser.py  db.py  filters.py  server.py
src/codesurface/parsers/: __init__.py  base.py  cpp.py  csharp.py  go.py  java.py  python_parser.py  typescript.py
tests/: test_filters.py  test_include_tests.py  test_json_output.py  test_parsers.py  test_server_progress.py
